@@ -1,3 +1,8 @@
+2006-01-08  Karl Runge <runge@karlrunge.com>
+	* libvncclient/vncviewer.c: fix non-jpeg/libz builds.
+	* examples/pnmshow24.c: fix non-ALLOW24BPP builds.
+	* libvncserver/main.c: fix 'static int' defn.
+
 2006-01-05  Karl Runge <runge@karlrunge.com>
 	* libvncserver/main.c: rfbRegisterProtocolExtension extMutex was
 	  never initialized.
